# mfat

./: .env.prod.example  .gitignore  CMakeLists.txt  README.md  docker-compose.prod.yml  docker-compose.yml  setup.sh
doc/Branding/Logo/eps/: logo-black.eps  logo-color.eps  logo-no-background.eps  logo-white.eps
doc/UI/: MFAT Wireframe — About.drawio  MFAT Wireframe — Contact.drawio  MFAT Wireframe — Courses.drawio  MFAT Wireframe — Homepage.drawio
doc/UML/: MFAT — UML.mdj
scripts/: db-shell.sh  docker-start-production.sh  initialize-vue-project.sh  setup.sh
src/api_server_cpp/: CMakeLists.txt  Dockerfile.dev  README.md  Server.cpp  mfat.h  server.cpp
src/app/: Dockerfile.dev  vite.config.ts
src/app_vue3/: package-lock.json  package.json  vite.config.ts
src/db_pg/migrations/: M_20230513214700_country_CREATE.sql  M_20230513214730_country_SEED.sql  M_20230513215000_city_zip_code_CREATE.sql  M_20230513215030_city_zip_code_SEED_CH.sql
src/db_postgresql/: Dockerfile.migrations.dev
src/db_postgresql/migrations/: 1_initial.up.sql  M_20230513214600_test_CREATE.sql
src/server/: Dockerfile.dev
